--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,14 +2,9 @@
 # Build and test ASP.NET Core projects targeting the full .NET Framework.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-name: dotnetwebappcicd
+name: EshopCICD
 trigger:
  - master
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
 
 stages:
   - stage: Build
