--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
           inputs:
             command: 'publish'
             publishWebProjects: true
+            projects: '**/*.sln'
             arguments: '-o $(Build.ArtifactStagingDirectory)'
           displayName: Publish
         - task: PublishBuildArtifacts@1
