--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,11 @@ stages:
     - job: Build
       pool: Default
       steps:
+        - task: UseDotNet@2
+          inputs:
+            packageType: 'sdk'
+            version: '7.0'
+
         - task: DotNetCoreCLI@2
           inputs:
             command: 'restore'
@@ -33,7 +38,7 @@ stages:
             command: 'publish'
             publishWebProjects: true
             projects: '**/*.sln'
-            arguments: '-o $(Build.ArtifactStagingDirectory)'
+            arguments: '--configuration Release --output  $(Build.ArtifactStagingDirectory)'
           displayName: Publish
         - task: PublishBuildArtifacts@1
           inputs:
