--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,13 +20,13 @@ stages:
         - task: DotNetCoreCLI@2
           inputs:
             command: 'restore'
-            projects: '**/*.sln'
+            projects: '**/*.csproj'
             feedsToUse: 'select'
           displayName: Restore
         - task: DotNetCoreCLI@2
           inputs:
             command: 'build'
-            projects: '**/*.sln'
+            projects: '**/*.csproj'
           displayName: Build
         - task: DotNetCoreCLI@2
           inputs:
@@ -37,7 +37,7 @@ stages:
           inputs:
             command: 'publish'
             publishWebProjects: true
-            projects: '**/*.sln'
+            projects: '**/*.csproj'
             arguments: '--configuration Release --output  $(Build.ArtifactStagingDirectory)'
           displayName: Publish
         - task: PublishBuildArtifacts@1
