--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,13 @@ stages:
         - task: DotNetCoreCLI@2
           inputs:
             command: 'restore'
-            projects: '**/*.csproj'
+            projects: '**/*.sln'
             feedsToUse: 'select'
           displayName: Restore
         - task: DotNetCoreCLI@2
           inputs:
             command: 'build'
-            projects: '**/*.csproj'
+            projects: '**/*.sln'
           displayName: Build
         - task: DotNetCoreCLI@2
           inputs:
@@ -32,7 +32,6 @@ stages:
           inputs:
             command: 'publish'
             publishWebProjects: true
-            projects: '**/*.csproj'
             arguments: '--configuration Release --output  "$(Build.ArtifactStagingDirectory)"'
           displayName: Publish
         - task: PublishBuildArtifacts@1
