--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,4 +81,4 @@ stages:
               azureSubscription: 'eshoparm'
               appType: 'webApp'
               WebAppName: 'infyqaenv'
-              packageForLinux: '$(Build.ArtifactStagingDirectory)/**/Web.zip'
+              packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
